force-app/main/default/objects/User/fields/driveconnect__Drive_Connect_Tokens__c.field-meta.xml
<CustomField>
    <fullName>driveconnect__Drive_Connect_Tokens__c</fullName>
    <label>Drive Connect Tokens</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>