force-app/main/default/objects/User/fields/dupcheck__dc3DisableDCTriggers__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__dc3DisableDCTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable All Deduplicate triggers</label>
    <type>Checkbox</type>
</CustomField>