force-app/main/default/objects/User/fields/dupcheck__dc3DisableDuplicateCheck__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Deduplicate</label>
    <type>Checkbox</type>
</CustomField>