force-app/main/default/objects/User/fields/echosign_dev1__EchoSign_Allow_Delegated_Sending__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box so that others in this Salesforce organization can send Adobe Acrobat Sign agreements on behalf of this user.</description>
    <inlineHelpText>Check this box so that others in this Salesforce organization can send Adobe Acrobat Sign agreements on behalf of this user.</inlineHelpText>
    <label>Allow Sending As Other Users</label>
    <type>Checkbox</type>
</CustomField>