force-app/main/default/objects/User/fields/Messaging_Sender_Contact__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Sender_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact record used as Message__c.Sender__c for internal users who do not have User.ContactId. Populated automatically when the user first sends a message.</description>
    <inlineHelpText>System-managed link between an internal user and their messaging sender Contact.</inlineHelpText>
    <label>Messaging Sender Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Messaging Sender Users</relationshipLabel>
    <relationshipName>Messaging_Sender_Users</relationshipName>
    <type>Lookup</type>
</CustomField>