force-app/main/default/objects/User/fields/Messaging_Sender_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Sender_Contact_Id__c</fullName>
    <description>18-character Id of the Contact used as Message__c.Sender__c for internal users without User.ContactId. Set automatically on first send.</description>
    <inlineHelpText>System-managed Contact Id for messaging sender linkage.</inlineHelpText>
    <label>Messaging Sender Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>