force-app/main/default/objects/User/fields/zoom_app__Login_Type__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Login_Type__c</fullName>
    <inlineHelpText>Specify Your Zoom Login Type</inlineHelpText>
    <label>Login Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>SSO</fullName>
            </value>
            <value>
                <fullName>Work Email</fullName>
                <default>true</default>
                <label>Work Email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>