force-app/main/default/objects/User/fields/zoom_app__Meeting_Password_Type__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Meeting_Password_Type__c</fullName>
    <defaultValue>3</defaultValue>
    <description>1: use PMI password for None PMI meeting;2: set a password for None PMI meeting;3: generate a random password for None PMI meeting</description>
    <label>Non-PMI Meeting Passcode</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>